--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -688,7 +688,7 @@ body img{
             document.getElementById("instructions").style.display = "none";
         }
         function Assign(){
-            alert(AgeGroupResult);
+           // alert(AgeGroupResult);
             fetch('/BackEnd/AssignAgeGroup/', {
                     method: 'POST',
                     headers: {
