--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -81,7 +81,7 @@
 				return false;
 			} else {
 				divCP.style.paddingTop = '0';
-
+				messageSpan.innerHTML = ""; 
 				messageSpan.style.visibility = 'hidden';
 			}
 	
