Added "/" in line 635 in Fav.html

--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -632,7 +632,7 @@ body img{
 	<!-- end copyright -->
 	
 	<!-- jquery -->
-	<script src="{% static 'js/jquery-1.11.3.min.js' %}"></script>
+	<script src="{% static '/js/jquery-1.11.3.min.js' %}"></script>
 	<!-- bootstrap -->
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<!-- count down -->
