--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -999,6 +999,9 @@ document.getElementById("closeErrorPopupUser").addEventListener("click", functio
             successPopup.style.display = "none";
         }
     };
+
+    /////////////////////////////////////////////////////
+    localStorage.setItem('previousReferrer', 'login');
 </script>
 
 
