--- a/FrontEnd/templates/signup.html
+++ b/FrontEnd/templates/signup.html
@@ -662,6 +662,10 @@ otherDiv.style.border = '2px solid transparent';  // Set a transparent border
         // Add an event listener to the checkbox to handle changes
         const agreeCheckbox = document.getElementById("agree");
         agreeCheckbox.addEventListener("change", handleCheckbox);
+
+    /////////////////////////////////////////////////////
+	localStorage.setItem('previousReferrer', 'signup');
+
       </script>
 
 </body>
