"result For" modification along with filter style modification

--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -1043,7 +1043,7 @@ $('#login-btn').on('click', clearAllFilters);
     });
 
 
-
+#commit
 resultText.style.display='none'
 document.addEventListener('DOMContentLoaded', function() {
 const summaries = document.querySelectorAll('summary');
