Test All Cases (SignUp and Login)

--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -357,7 +357,7 @@ body img{
                                             <input type="radio" name="ageGroup" class="option-input radio" value="17+">
                                             17+</label> <br>
                                     </div>
-                                    <button type="submit" id="setAgeGroup" style="width: 60%; font-size: 70%; font-weight: 700;" onclick="confirm()">Set Age Group</button>
+                                    <button type="submit" id="setAgeGroup" style="width: 60%; font-size: 70%; font-weight: 700;">Set Age Group</button>
                                 </form>
                                 <script>
                                     document.getElementById('ageGroupConfirmForm').addEventListener('submit', function(event) {
