"saved to favorite btn" modification

--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -360,6 +360,7 @@
 								addToFavorites(gameId);
                                     if (favText.textContent === 'Add to Favourite Games') {
                                         favText.textContent = 'Saved to Favourite Games!';
+                                        favBtn.style.backgroundColor = '#06f7ff';
 
                                     }});
 
