--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -206,7 +206,7 @@
             width: 100%;
             max-width: 200px;
 			margin-left: -7%;
-			margin-top: 10%;
+			margin-top: 5%;
 		}
 
         @media screen and (max-width: 1024px) {
@@ -732,11 +732,6 @@ padding: 2%;
 			</div>
 		</div>
 	</div>
-	<!-- end breadcrumb section -->
-	<ul class="Realbreadcrumb">
-					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
-
-				 </ul>
 
 	<!-- games -->
 	<div class="product-section mt-150 mb-150">
@@ -871,7 +866,7 @@ function appendCheckboxesWithViewMore(container, checkboxes) {
     checkboxes.forEach(function (option, index) {
         const checkboxId = `${container.attr('id')}-checkbox-${index}`;
         container.append(`
-            <div class="form-check" style='margin-top:2%; margin-bottom:2%; padding-top:2%; padding-bottom:1%;'>
+            <div class="form-check" style="padding-top:7% ;">
                 <input  id="${checkboxId}" class="form-check-input" type="checkbox" value="${option}" data-category="${container.attr('id')}">
                 <label for="${checkboxId}"  class="form-check-label">${option}</label>
             </div>
@@ -895,7 +890,7 @@ function appendRatingCheckboxes(container) {
     for (let rating = 1; rating <= 5; rating++) {
         const checkboxId = `${container.attr('id')}-checkbox-${rating}`; // Unique id for each checkbox
         container.append(`
-            <div class="form-check">
+            <div class="form-check" >
                 <input id="${checkboxId}" class="form-check-input" type="checkbox" value="${rating}" data-category="${container.attr('id')}">
                 <label for="${checkboxId}" class="form-check-label">${stars.repeat(rating)}</label>
             </div>
@@ -946,6 +941,18 @@ $.ajax({
             if (b === "Others") return -1;
             return 0;
         });
+
+        // Append checkboxes with view more options
+        appendCheckboxesWithViewMore($('#Languages-options-container'), data.languages);
+        attachEventListeners();
+        EventListeners();
+    },
+    error: function () {
+        console.error('Failed to fetch language options.');
+    }
+});
+
+
 // Extract In-App Purchases
 $.ajax({
     url: '/BackEnd/ExtractInAppPurchases/',
@@ -960,20 +967,6 @@ $.ajax({
         console.error('Failed to fetch In-App Purchase options.');
     }
 });
-
-
-
-        // Append checkboxes with view more options
-        appendCheckboxesWithViewMore($('#Languages-options-container'), data.languages);
-        attachEventListeners();
-        EventListeners();
-    },
-    error: function () {
-        console.error('Failed to fetch language options.');
-    }
-});
-
-
 
 // Extract Rating
 $.ajax({
@@ -1018,7 +1011,6 @@ $('.filter-container').on('change', '#Average_User_Rating-options-container inpu
 
 
 function clearAllFilters() {
- $('#resultsForText').css('display', 'none'); // Set otherElement to display: none
 // To remove selected checkbox from local storage
 $('input[type="checkbox"]').each(function () {
 checkboxKey = $(this).attr('id');
@@ -1027,7 +1019,6 @@ isChecked = $(this).prop('checked');
 localStorage.removeItem(checkboxKey);
 });
 $('input[type="checkbox"]').removeAttr('checked');
-
 $("#sortSelect").prop('selectedIndex', 0);
 handleSortChange();
 updateGamesByMultipleCategories(['Price', 'Genres', 'In_app_Purchases', 'Average_User_Rating', 'Languages', 'Rating']);
@@ -1041,7 +1032,6 @@ $('#filter-btn').on('click', function() {
 });
 $('#login-btn').on('click', clearAllFilters);
     });
-
 
 
 
@@ -1095,22 +1085,19 @@ $('input[type="checkbox"]').each(function () {
         </div>
     </details>
 
-  <details class="category">
-    <summary>In-App Purchases</summary>
-    <div class="border-bottom pb-4 mb-4">
-        <div class="d-grid gap-2" id="In_app_Purchases-options-container">
-        </div>
-    </div>
-</details>
-
-
-
+              <details class="category">
+                <summary>In-App Purchases</summary>
+                <div class="border-bottom pb-4 mb-4">
+                    <div class="d-grid gap-2" id="In_app_Purchases-options-container">
+                    </div>
+                </div>
+            </details>
 
 
                 <details class="category">
                     <summary>Rating</summary>
-                    <div class="border-bottom pb-4 mb-4" style="margin-bottom: 0rem !important; padding-bottom:0rem !important;">
-                        <div class="d-grid gap-2" id="Average_User_Rating-options-container">
+                    <div class="border-bottom pb-4 mb-4"style="margin-bottom:0rem !important;">
+                        <div class="d-grid gap-2" id="Average_User_Rating-options-container" >
                         </div>
                     </div>
                 </details>
