--- a/FrontEnd/templates/GameInfoPage.html
+++ b/FrontEnd/templates/GameInfoPage.html
@@ -99,6 +99,126 @@
   width: 40%;
 
 }
+
+
+
+@media only screen and (min-width: 1101px) and (max-width: 1499px) {
+
+.site-logo img{
+	position: relative;
+	padding-left: -45px;
+	}
+
+.main-menu{
+	margin-left: -10px;
+	}
+
+.left-nav-header{
+	margin-right: -45px;
+	}
+
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+
+
+@media only screen and (min-width: 1500px) and (max-width: 2500px) {
+
+.main-menu{
+margin-left: -2220px;
+margin-right: 110px;
+	}
+
+.site-logo img{
+	margin-left: -20px;
+	margin-right: 20px
+	}
+
+.left-nav-header{
+	margin-right: -200px;
+	}
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+
+@media only screen and (min-width: 901px) and (max-width: 1100px) {
+
+.main-menu{
+	margin-left: 20px;
+	margin-top: 15px;
+	}
+
+
+.site-logo{
+	 margin-left: 0%;
+	 z-index:0;
+	 }
+
+.left-nav-header{
+	margin-right: -15px;
+	}
+
+.about-widget{
+margin-left:15px;
+}
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+@media only screen and (min-width: 200px) and (max-width: 900px) {
+
+#footer{
+	 justify-content: space-between;
+	 padding-right: 20px;
+	 margin-left:0px;
+	 margin-right: 0px;
+	 margin-top: -33px;
+	}
+
+ .site-logo img{
+	 width: 1000px;
+	 height: 90px;
+
+	 }
+ .site-logo {
+	 margin-left: 5px;
+	 z-index:0;
+
+	 }
+ .breadcrumb-text p{
+	  font-size: 12px;
+	 }
+
+}
 	</style>
 
 </head>
@@ -140,17 +260,18 @@
 									<li><a href="{% url 'profile' %}">Profile</a>
 									<li><a href="{% url 'contact' %}">Contact Us</a></li>
 									<li><a href="{% url 'about' %}">About Us</a></li>
-								<li>
-									<div class="header-icons">
 
-										<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;">Log Out</a>
-									</div>
+											<li id="NoHover" class="left-nav-header">
+
+										<a class=" sub-menu" ><i class="fa fa-user" aria-hidden="true" style="color:#06f7ff;"></i>&nbsp<span id="welcome" style="font-weight: 700 ">Hello</span></a>
+
+										<a class="boxed-btn sub-menu " id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;">Log Out</a>
+
 								</li>
 							</ul>
 						</nav>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
-						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp<span id="welcome" style="font-weight: 700;"></span></div>
 
 						<script>
 							//------------------------------Hello Username:
