--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -67,88 +67,89 @@
 		}
 
         @media screen and (max-width: 1024px) {
-    .container {
-        margin-top: -40%;
-        margin-left: 4%;
+    .GAMES {
+        margin-top: -45%;
+        margin-left: 24%;
     }
 }
 
 @media screen and (max-width: 970px) {
-    .container {
-        margin-left: 10%;
-        margin-top: -50%;
+    .GAMES {
+        margin-left: 20%;
+        margin-top: -65%;
     }
 }
 
 
         @media screen and (max-width: 820px) {
-    .container {
-        margin-top: -50%;
-        margin-left: 13%;
+    .GAMES {
+        margin-top: -65%;
+        margin-left: 24%;
         max-width: 720px;
     }
 }
 
         @media screen and (max-width: 768px) {
-    .container {
-        margin-top: -60%;
-        /*margin-left: 13%;*/
+    .GAMES {
+        margin-top: -65%;
+        margin-left: 22%;
         max-width: 552px;
     }
 }
 
 @media screen and (max-width: 540px) {
-    .container {
-        margin-top: -102%;
-        margin-left: 4%;
+    .GAMES {
+        margin-top: -116%;
+        margin-left: 28%;
+        max-width: 350px;
     }
 }
 
 @media screen and (max-width: 480px) {
-    .container {
+    .GAMES {
         margin-top: -108%;
-        margin-left: 24%;
+        margin-left: 48%;
         max-width: 326px;
     }
 }
 
 
 @media screen and (max-width: 414px) {
-    .container {
-        margin-top: -117%;
-        margin-left: 16%;
-        width: 381px;
+    .GAMES {
+        margin-top: -121%;
+        margin-left: 32%;
+        width: 280px;
     }
 }
 
 @media screen and (max-width: 375px) {
-    .container {
-        margin-top: -143%;
-        margin-left: 20%;
-        width: 720px;
+    .GAMES {
+        margin-top: -130%;
+        margin-left: 40%;
+        width: 220px;
     }
 }
 
 @media screen and (max-width: 320px) {
-    .container {
+    .GAMES {
         margin-top: -132%;
-        margin-left: 27%;
+        margin-left: 55%;
         max-width: 720px;
     }
 }
 
 @media screen and (max-width: 280px) {
-    .container {
-        margin-top: -164%;
-        margin-left: 34%;
-        width:400px
+    .GAMES {
+        margin-top: -225%;
+        margin-left: 35%;
+        max-width: 200px
     }
 }
 
 @media screen and (max-width: 200px) {
-    .container {
+    .GAMES {
         margin-top: -295%;
-        margin-left: 34%;
+        margin-left: 50%;
     }
 }
 
@@ -256,8 +257,8 @@
 
 @media screen and (max-width: 280px) {
         .filter-container {
-            width: 50%;
-            left: -23% !important;
+            width: 40%;
+            left: -28% !important;
     }
 }
 
@@ -565,14 +566,14 @@ margin-left:20%;
 @media screen and (max-width: 390px) {
     .result-text {
         left: 31%;
-        top: -268px;
+        top: -240px;
 
     }
 }
 
 @media screen and (max-width: 390px) {
     .checkbox-container {
-        top: -265px;
+        top: -235px;
     }
 }
 
@@ -633,6 +634,126 @@ padding: 2%;
 
 
 }
+
+
+
+@media only screen and (min-width: 1101px) and (max-width: 1499px) {
+
+.site-logo img{
+	position: relative;
+	padding-left: -45px;
+	}
+
+.main-menu{
+	margin-left: -10px;
+	}
+
+.left-nav-header{
+	margin-right: -45px;
+	}
+
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+
+
+@media only screen and (min-width: 1500px) and (max-width: 2500px) {
+
+.main-menu{
+margin-left: -2220px;
+margin-right: 110px;
+	}
+
+.site-logo img{
+	margin-left: -20px;
+	margin-right: 20px
+	}
+
+.left-nav-header{
+	margin-right: -200px;
+	}
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+
+@media only screen and (min-width: 901px) and (max-width: 1100px) {
+
+.main-menu{
+	margin-left: 20px;
+	margin top: 15px;
+	}
+
+
+.site-logo{
+	 margin-left: 0%;
+	 z-index:0;
+	 }
+
+.left-nav-header{
+	margin-right: -15px;
+	}
+
+.about-widget{
+margin-left:15px;
+}
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+@media only screen and (min-width: 200px) and (max-width: 900px) {
+
+#footer{
+	 justify-content: space-between;
+	 padding-right: 20px;
+	 margin-left:0px;
+	 margin-right: 0px;
+	 margin-top: -33px;
+	}
+
+ .site-logo img{
+	 width: 1000px;
+	 height: 90px;
+
+	 }
+ .site-logo {
+	 margin-left: 5px;
+	 z-index:0;
+
+	 }
+ .breadcrumb-text p{
+	  font-size: 12px;
+	 }
+
+}
     </style>
 
 </head>
@@ -657,8 +778,12 @@ padding: 2%;
 								<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
 								</a>
 							</div>
+							<!-- logo -->
+
+							<!-- menu start -->
 							<nav class="main-menu">
 								<ul>
+
 									<li><a href=#>Games</a>
 										<ul class="sub-menu">
 											<li><a href="{% url 'Games' %}">All Games</a></li>
@@ -671,17 +796,17 @@ padding: 2%;
 									<li><a href="{% url 'contact' %}">Contact Us</a></li>
 									<li><a href="{% url 'about' %}">About Us</a></li>
 
-								<li>
-									<div class="header-icons">
+											<li id="NoHover" class="left-nav-header">
 
-										<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;" onclick="clearStorage()">Log Out</a>
-									</div>
+										<a class=" sub-menu" ><i class="fa fa-user" aria-hidden="true" style="color:#06f7ff;"></i>&nbsp<span id="welcome" style="font-weight: 700 ">Hello</span></a>
+
+										<a class="boxed-btn sub-menu " id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;">Log Out</a>
+
 								</li>
 							</ul>
 						</nav>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
-						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp<span id="welcome" style="font-weight: 700;"></span></div>
 						<script>
 							$(document).ready(function() {
 
