--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -68,7 +68,7 @@
 	</script>
 	<style>
 		/*
-@media (max-width: 767px) { /* work a littile bit*/
+@media (max-width: 767px) { /* work a little bit*/
     /* Adjust styles for smaller screens
     .form-container form {
         width: 90%;
@@ -256,9 +256,7 @@ height:auto
 	position: relative;
 	left: -25px;
 }
-body img{
-  max-width: 600px;
-}
+
 
 #forgetPass ,#forgetUser{
 			font-family: 'Poppins', sans-serif;
@@ -280,12 +278,6 @@ body img{
 
 
 
-				.site-logo img{
-  width: 200px;
-    height: 100px;
-	position: relative;
-	left: -25px;
-}
 	.mb-150{
 			margin-bottom: 0px;
 
@@ -379,8 +371,6 @@ body img{
 }
 
 .left{
-
-
   margin-top: 40%;
 }
 
@@ -398,6 +388,68 @@ body img{
 //margin-bottom:-150%;}
 */
 
+
+@media only screen and (min-width: 1101px) and (max-width: 1499px) {
+
+.site-logo img{
+	position: relative;
+	padding-left: -45px;
+	}
+
+
+}
+
+
+@media only screen and (min-width: 1500px) and (max-width: 2500px) {
+
+.site-logo img{
+	margin-left: -20px;
+	margin-right: 20px
+	}
+
+}
+
+
+
+
+@media only screen and (min-width: 901px) and (max-width: 1100px) {
+
+.site-logo{
+	 margin-left: 0%;
+	 z-index:0;
+	 }
+
+.about-widget{
+margin-left:15px;
+}
+
+
+}
+
+
+
+@media only screen and (min-width: 200px) and (max-width: 900px) {
+
+#footer{
+	 justify-content: space-between;
+	 padding-right: 20px;
+	 margin-left:0px;
+	 margin-right: 0px;
+	 margin-top: -33px;
+	}
+
+ .site-logo img{
+	 width: 1000px;
+	 height: 90px;
+
+	 }
+ .site-logo {
+	 margin-left: 5px;
+	 z-index:0;
+
+	 }
+
+}
 	</style>
 
 </head>
