--- a/FrontEnd/templates/profile.html
+++ b/FrontEnd/templates/profile.html
@@ -339,7 +339,123 @@ body img{
 
 }
 
+@media only screen and (min-width: 1101px) and (max-width: 1499px) {
 
+.site-logo img{
+	position: relative;
+	padding-left: -45px;
+	}
+
+.main-menu{
+	margin-left: -10px;
+	}
+
+.left-nav-header{
+	margin-right: -45px;
+	}
+
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+
+
+@media only screen and (min-width: 1500px) and (max-width: 2500px) {
+
+.main-menu{
+margin-left: -2220px;
+margin-right: 110px;
+	}
+
+.site-logo img{
+	margin-left: -20px;
+	margin-right: 20px
+	}
+
+.left-nav-header{
+	margin-right: -200px;
+	}
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+
+@media only screen and (min-width: 901px) and (max-width: 1100px) {
+
+.main-menu{
+	margin-left: 20px;
+	margin top: 15px;
+	}
+
+
+.site-logo{
+	 margin-left: 0%;
+	 z-index:0;
+	 }
+
+.left-nav-header{
+	margin-right: -15px;
+	}
+
+.about-widget{
+margin-left:15px;
+}
+
+nav.main-menu li:hover > a span {
+    color: #ff069a;
+}
+
+nav.main-menu ul li:last-child a {
+padding: 10px;
+}
+
+}
+
+
+
+@media only screen and (min-width: 200px) and (max-width: 900px) {
+
+#footer{
+	 justify-content: space-between;
+	 padding-right: 20px;
+	 margin-left:0px;
+	 margin-right: 0px;
+	 margin-top: -33px;
+	}
+
+ .site-logo img{
+	 width: 1000px;
+	 height: 90px;
+
+	 }
+ .site-logo {
+	 margin-left: 5px;
+	 z-index:0;
+
+	 }
+ .breadcrumb-text p{
+	  font-size: 12px;
+	 }
+
+}
 	</style>
 
     </head>
@@ -353,57 +469,53 @@ body img{
         </div>
         <!--PreLoader Ends-->
 
-        	<!-- header -->
+
+	<!-- header -->
 	<div class="top-header-area" id="sticker">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 col-sm-12 text-center">
 					<div class="main-menu-wrap">
-						<!-- logo -->
-						<div class="site-logo">
-							<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-							</a>
-						</div>
-						<!-- logo -->
+							<!-- logo -->
+							<div class="site-logo">
+								<a href="{% url 'Games' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+								</a>
+							</div>
+							<!-- logo -->
 
-						<!-- menu start -->
-                        
-            <!-- Error Popup -->
-           <div id="errorPopUp" class="Popup" style="display: none;">
-            <div class="popup-content">
-                <h4 style="font-size: 20px; font-weight: inherit;">Unexpected error occured, please try again! <a id="next-button" class="boxed-btn" href="{% url 'index' %}">Try again</a> </h4>
-            </div>
-        </div>
-						<nav class="main-menu">
-							<ul>
+							<!-- menu start -->
+							<nav class="main-menu">
+								<ul>
 
-								</li>
+									<li><a href=#>Games</a>
+										<ul class="sub-menu">
+											<li><a href="{% url 'Games' %}">All Games</a></li>
+											<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
+											<li><a href="{% url 'History' %}">Visited Store Games</a></li>
 
-								<li><a href=#>Games</a>
-									<ul class="sub-menu">
-										<li><a href="{% url 'Games' %}">All Games</a></li>
-										<li><a href="{% url 'Fav' %}">Favourite Games</a></li>
-										<li><a href="{% url 'History' %}">Visited Store Games</a></li>
+										</ul>
+									</li>
+									<li><a href="{% url 'profile' %}">Profile</a>
+									<li><a href="{% url 'contact' %}">Contact Us</a></li>
+									<li><a href="{% url 'about' %}">About Us</a></li>
 
-									</ul>
-								</li>
-								<li><a href="{% url 'profile' %}">Profile</a>
-								<li><a href="{% url 'contact' %}">Contact Us</a></li>
-								<li><a href="{% url 'about' %}">About Us</a></li>
-								<li>
+											<li id="NoHover" class="left-nav-header">
 
-								</li>
-								<li>
-									<div class="header-icons">
+										<a class=" sub-menu" ><i class="fa fa-user" aria-hidden="true" style="color:#06f7ff;"></i>&nbsp<span id="welcome" style="font-weight: 700 ">Hello</span></a>
 
-										<a class="boxed-btn" id="login-btn" href="{% url 'LogoutUser' %}" >Log out</a>
-									</div>
+										<a class="boxed-btn sub-menu " id="login-btn" href="{% url 'LogoutUser' %}"  style="font-size: 20px;">Log Out</a>
+
 								</li>
 							</ul>
 						</nav>
 						<div class="mobile-menu"></div>
 						<!-- menu end -->
-						<div class="helloUserName"><i class="fa fa-user" aria-hidden="true"></i>&nbsp<span id="welcome" style="font-weight: 700;"></span></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- end header -->
 
 						<script>
 							$(document).ready(function() {
