--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -35,12 +35,16 @@
 	<link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <!-- responsive -->
     <link rel="stylesheet" href="{% static 'css/AEresponsive.css' %}">
+
+
     <script>
         var status = "{{ status }}";
         var PageName = localStorage.getItem('previousReferrer');
         //alert(PageName);
         var AgeGroupResult;
     </script>
+
+
     <style>
         #main-content {
             background: rgb(21, 22, 51);
@@ -154,26 +158,100 @@ body img{
     margin-right: 5px;
     margin-bottom: 20px;
   }
+.site-logo {
+  position: relative;
+  left: -100px;
+  max-width: 150px;
+}
 
+
+.site-logo img{
+  width: 200px;
+    height: 100px;
+	position: relative;
+	left: -25px;
+}
+
+@media only screen and (min-width: 1101px) and (max-width: 1499px) {
+
+.site-logo img{
+	position: relative;
+	padding-left: -45px;
+	}
+
+
+}
+
+
+@media only screen and (min-width: 1500px) and (max-width: 2500px) {
+
+.site-logo img{
+	margin-left: 78px;
+
+	}
+
+}
+
+
+
+
+@media only screen and (min-width: 901px) and (max-width: 1100px) {
+
+.site-logo{
+	 margin-left: 0%;
+	 z-index:0;
+	 }
+
+.about-widget{
+margin-left:15px;
+}
+
+
+}
+
+
+
+@media only screen and (min-width: 200px) and (max-width: 900px) {
+
+#footer{
+	 justify-content: space-between;
+	 padding-right: 20px;
+	 margin-left:0px;
+	 margin-right: 0px;
+	 margin-top: -33px;
+	}
+
+ .site-logo img{
+	 width: 1000px;
+	 height: 90px;
+
+	 }
+ .site-logo {
+	 margin-left: 5px;
+	 z-index:0;
+
+	 }
+
+}
     </style>
     <body>
 	<!-- header -->
-    <div class="top-header-area" id="sticker">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-sm-12 text-center">
-                    <div class="main-menu-wrap">
-                        <!-- logo -->
-                        <div class="site-logo">
-                            <a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-        <!-- end header -->
+<div class="top-header-area" id="sticker">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12 col-sm-12 text-center">
+				<div class="main-menu-wrap">
+					<!-- logo -->
+					<div class="site-logo">
+						<a href="{% url 'index' %}">	<img src="{% static 'img/Games/GameGeek.png' %}" alt="logo">
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+	<!-- end header -->
 
     <div id="main-content">
         <div class=".container-lg">
