Minor Responsive modifications (Fav page)

--- a/FrontEnd/templates/Fav.html
+++ b/FrontEnd/templates/Fav.html
@@ -753,7 +753,7 @@ padding: 10px;
 	<!-- end copyright -->
 	
 	<!-- jquery -->
-<!--	<script src="{% static '/js/jquery-1.11.3.min.js' %}"></script>  Reema modifieed this -->
+	<script src="{% static '/js/jquery-1.11.3.min.js' %}"></script>
 	<!-- bootstrap -->
 	<script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
 	<!-- count down -->
@@ -770,7 +770,7 @@ padding: 10px;
 	<script src="{% static '/js/jquery.meanmenu.min.js' %}"></script>
 	<!-- main js -->
 	<script src="{% static '/js/main.js' %}"></script>
-	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+	<!--<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script> -->
 
 </body>
 {% endblock %}
