--- a/FrontEnd/templates/login.html
+++ b/FrontEnd/templates/login.html
@@ -771,7 +771,7 @@ margin-left:15px;
             {% csrf_token %}
             <div class="input-pair">
                 <label for="username" style="margin-left: 10px;">Username:</label>
-                <input type="username" id="Username" class="input-box" name="Username" required placeholder="Enter your username" style="margin-left: 10px;">
+                <input type="username" id="UserName" class="input-box" name="Username" required placeholder="Enter your username" style="margin-left: 10px;">
             </div>
             <button type="button" id="EmailnotConfirmedButton">Send</button>
         </form>
